--- a/output/style.css
+++ b/output/style.css
@@ -52,9 +52,8 @@ blockquote {
 }
 
 pre {
-    background-color: rgb(234, 234, 234);
-    padding: 20px;
+    /* background-color: rgb(234, 234, 234); */
+    padding: 20px 0; 
     line-height: 2.3ch;
     margin: 20px 0;
-    /* background-color: black; */
 }
